AndroidPanama: fix _LinkerOptions.forDowncall